--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -11,21 +11,20 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-#      - name: export environment
-#        run: |
-#          touch ./.env
-#          echo "${{ secrets.ENV }}" >> ./.env
-#          source ./.env
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
         with:
-          registry: ${{ secrets.REGISTRY_HOST }}
-          username: ${{ secrets.REGISTRY_ID }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: .
-          push: true
-          platforms: linux/amd64
-          tags: ${{ secrets.REGISTRY_HOST }}/tarae:latest
+          java-version: 21
+          distribution: temurin
+      - name: Set up environment variables
+        env:
+          REGISTRY_HOST: ${{ secrets.REGISTRY_HOST }}
+          REGISTRY_ID: ${{ secrets.REGISTRY_ID }}
+          REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
+        run: echo "Environment variables set"
+      - name: Build and push Docker image
+        run: ./gradlew jib
+        env:
+          REGISTRY_HOST: ${{ secrets.REGISTRY_HOST }}
+          REGISTRY_ID: ${{ secrets.REGISTRY_ID }}
+          REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
